[package]
name = "remotion-renderer-rs"
description = "Remotion Renderer, now in Rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT"
authors = ["Siddharth Jha"]
readme = "README.md"
keywords = ["remotion"]
categories = []

[dependencies]
image = "0.24.7"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
uuid = { version = "0.8.2", features = ["v4"] }
wry = { git = "https://github.com/clearlysid/wry.git" }
