[package]
name = "rustymotion"
description = "Remotion Renderer, now in Rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "MIT"
authors = ["Siddharth Jha"]
readme = "README.md"
keywords = ["remotion", "ffmpeg", "renderer"]
categories = []

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.82"
headless_chrome = "1.0.7"
num_cpus = "1.16.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
henx = { git = "https://github.com/helmerapp/henx/", branch = "main" }
